<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_10dp"
    android:orientation="horizontal"
    app:cardBackgroundColor="@color/blue_forte"
    app:cardCornerRadius="@dimen/dimen_15dp"
    android:id="@+id/card_container_item"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageview_avatar"
            android:layout_width="@dimen/dimen_80dp"
            android:layout_height="@dimen/dimen_80dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textview_titulo_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageview_avatar"
            app:layout_constraintTop_toTopOf="@+id/imageview_avatar" />

        <ImageView
            android:id="@+id/imageView_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textview_date"
            app:layout_constraintEnd_toStartOf="@+id/textview_date"
            app:layout_constraintStart_toEndOf="@+id/imageview_avatar"
            app:layout_constraintTop_toTopOf="@+id/textview_date"
            app:srcCompat="@drawable/ic_date_range_black_24dp" />

        <TextView
            android:id="@+id/textview_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/date"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_date"
            app:layout_constraintTop_toBottomOf="@+id/textview_titulo_name" />

        <ImageView
            android:id="@+id/imageView_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textview_runtime"
            app:layout_constraintEnd_toStartOf="@+id/textview_runtime"
            app:layout_constraintStart_toEndOf="@+id/imageview_avatar"
            app:layout_constraintTop_toTopOf="@+id/textview_runtime"
            app:srcCompat="@drawable/ic_timer_black_24dp" />

        <TextView
            android:id="@+id/textview_runtime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/runtime"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_runtime"
            app:layout_constraintTop_toBottomOf="@+id/textview_date" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>